src/test/deca/context/invalid/class_already_declared.deca
// Test la règle 1.3: la classe déclarée existe déjà.

class A  {
    int x = 5;
}

// Resultat:
//# RULE 1.3 DOIT S'AFFICHER